
=====================
Version 4.2

Axel Jacobs added -cp and -palettes options to falsecolor.

Fixed bug in matrix output of genBSDF introduced shortly before 4.1 release.

Made rvu more responsive in multi-processing mode when changing parameters.
Explicit "new" command not needed to show changes, because it goes back
to "immediate mode" once something is changed.  Processing will be slow
but response time quick until next "new" command.

Fixed major bug in transmitting proxy material sampling.

Patched cmake build tools (changes by Zack Galbreath).

Removed requirement for pflip -h to be given input file (can pipe from stdin).

Added "Number of processes" slider to trad "Action" pane to control rad -N
option for rvu and batch rendering.

Added -c option to vwrays to repeat pixels for rtcontrib.

Reworked rtcontrib program and renamed to rcontrib.  New version runs much
faster, especially on multiprocessor systems, and doesn't require as much
memory.  No longer calls rtrace; instead does all the work itself.

Added -d option to genskyvec to produce direct-only (sun no sky) vector.

Added Ashikhmin-Shirley anisotropic BRDF model (ashik2) with help
from Nicolas Boneel.

Added Ruby rewrite of objview.csh by Rob Guglielmetti.

Fixed bug in reciprocity for tensor tree BTDF representations.  Thanks
to Andy McNeil for identifying the problem.

Added MNAME and ZNAME variables to ranimove for debugging & testing.

Created pmblur2 command to take motion and depth buffers from ranimove
to compute a better motion blur.

****** COMPATIBILITY CHANGE ********
Changed BSDF routines to use updated/corrected XML specification and
removed depracated BSDF support from mkillum.

Fixed behavior of i/o flushing in rcontrib with -c > 1 (averaging).  Thanks
to Lars Grobe for help identifying this problem.

Fixed bug in depth-of-field blur where view distance was measured from
fore clipping plane rather than viewpoint.  Thanks to Peter A-B for
pointing this out.